# SELFBull

./: .gitignore  README.md  pyproject.toml
data/examples/: manual_frequency_capture.csv
docs/: SELFBULL-004-CREDENTIAL-CUSTODY.md  SELFBULL-004-NORMALIZATION-CONTRACT.md  SELFBULL-004B-ONE-TOOL-MCP-CONTRACT.md  SELFBULL-004B-SNAPSHOT-RECEIPT-ADMISSION-DESIGN.md  SELFBULL-004B-WEBULL-MCP-1.1.6-SNAPSHOT-FORMATTER-CONTRACT.md  SELFBULL-CLI-WITNESS-RUNBOOK.md  SELFBULL-EXTENDED-HOURS-REQUEST-MODE.md  SELFBULL-INTERFACE-CONTRACT.md  SELFBULL-MANUAL-OBSERVATION-SPEC.md  SELFBULL-MCP-READONLY-RUNBOOK.md  SELFBULL-MOBILE-CAPTURE-GUIDE.md  SELFBULL-PHASE1-SPEC.md  SELFBULL-SELFQUANT-OBSERVATION-ADAPTER-PLAN.md  SELFQUANT-INTEGRATION-PLAN.md
doctrine/: SELFBULL-003-HUMAN-DECISION.md  SELFBULL-003-SCOPE.md  SELFBULL-004-HUMAN-DECISION.md  SELFBULL-004-SCOPE.md  SELFBULL-004B-MCP-COMPOSITION-HUMAN-DECISION.md  SELFBULL-004B-MCP-COMPOSITION-SCOPE.md
src/selfbull/: __init__.py  adapter.py  audit.py  contracts.py  manifest.py  manual_capture.py  mcp_inventory.py  mcp_one_tool_composition.py  mcp_session_harness.py  observation_delta.py  observation_normalizer.py  (+7 more)
tests/: test_adapter.py  test_contracts.py  test_manifest.py  test_manual_capture.py  test_mcp_inventory.py  test_mcp_one_tool_composition.py  test_mcp_session_harness.py  test_no_selfquant_dependency.py  test_observation_delta.py  test_observation_normalizer.py  test_observation_parser.py  test_observation_schema.py  test_observation_store.py  test_replay.py  test_snapshot_ledger.py  test_snapshot_receipt_admission.py
(+1 files in other folders)
