[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "selfbull"
version = "0.1.0"
description = "SELFBULL — quarantined, non-executing Webull broker-surface adapter. Phase 1: offline, unauthenticated, standard-library only."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
